--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <nav>
         <h1>Super Requete</h1>
-        <input type="text">
+        <input type="text" id='input'>
         <input type="radio" name="tech" id="tech1" value="XMLhttp"><label for="tech1">XMLhttp</label>
         <input type="radio" name="tech" id="tech2" value="Fetch"><label for="tech2">Fetch</label>
         <input type="radio" name="tech" id="tech3" value="axios"><label for="tech3">axios</label>
         <input type="radio" name="tech" id="tech4" value="jQuery"><label for="tech4">jQuery</label>
         <button id="btn">Search</button>
     </nav>
-    
+    <script src="./script.js"></script>
 </body>
 </html>
