--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css">
     <title>Giphy Request</title>
 </head>
 <body>
@@ -16,6 +17,9 @@
         <input type="radio" name="tech" id="tech4" value="jQuery"><label for="tech4">jQuery</label>
         <button id="btn">Search</button>
     </nav>
+    <section id="content"></section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
